crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__string_unclosed.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "let value = \"hello"
---
alder::syntax

  × this string is missing its closing quote at the end of the file
   ╭─[/project/src/main.ald:1:19]
 1 │ let value = "hello
   ·             ┬
   ·             ╰── this string starts here
   ╰────
  help: add a closing `"` before the end of the line
