crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__string_unicode_format.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "let value = \"\\u1234\""
---
alder::syntax

  × this Unicode escape needs hexadecimal digits inside braces
   ╭─[/project/src/main.ald:1:14]
 1 │ let value = "\u1234"
   ·             ┬─┬
   ·             │ ╰── malformed Unicode escape
   ·             ╰── this string starts here
   ╰────
  help: write `\u{0041}` or `\u{1F600}`: braces are required, with four to six
        hexadecimal digits inside
