crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__string_unicode_too_short.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "let value = \"\\u{41}\""
---
alder::syntax

  × this Unicode escape has 2 hexadecimal digits, but only four to six are
  │ allowed
   ╭─[/project/src/main.ald:1:14]
 1 │ let value = "\u{41}"
   ·             ┬───┬──
   ·             │   ╰── expected four to six hexadecimal digits
   ·             ╰── this string starts here
   ╰────
  help: pad the code with leading zeros, as in `\u{0041}`
