crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__style_colon.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "let value = style { color red }"
---
alder::syntax

  × I was expecting `:` after this style property or selector
   ╭─[/project/src/main.ald:1:27]
 1 │ let value = style { color red }
   ·             ┬             ┬
   ·             │             ╰── expected `:`
   ·             ╰── this style block starts here
   ╰────
