crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__style_dimension_number.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "let value = style { padding: 007px }"
---
alder::syntax

  × decimal numbers cannot have leading zeros
   ╭─[/project/src/main.ald:1:31]
 1 │ let value = style { padding: 007px }
   ·             ┬                 ┬
   ·             │                 ╰── remove the leading zero
   ·             ╰── this style block starts here
   ╰────
